--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,19 @@
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
-			<artifactId>bigdataviewer-vistools</artifactId>
+			<artifactId>bigdataviewer-core</artifactId>
+			<version>7.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>bigdataviewer-vistools</artifactId>
+			<version>1.0.0-beta-18</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>sc.fiji</groupId>-->
+<!--			<artifactId>bigdataviewer-core</artifactId>-->
+<!--			<version>7.0.0</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>com.miglayout</groupId>
 			<artifactId>miglayout</artifactId>
@@ -55,6 +66,22 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej-ops</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>bigvolumeviewer</artifactId>
+			<version>0.1.7-SNAPSHOT</version>
+<!--			<scope>test</scope>-->
 		</dependency>
 	</dependencies>
 
