[maven-release-plugin] prepare release labeleditor-0.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
 	<groupId>com.indago</groupId>
 	<artifactId>labeleditor</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 
 	<name>Label Editor</name>
 	<description>UI component for image segmentation label comparison and selection</description>
@@ -153,7 +153,8 @@
 		<connection>scm:git:git://github.com/juglab/labeleditor</connection>
 		<developerConnection>scm:git:git@github.com:juglab/labeleditor</developerConnection>
 		<url>https://github.com/juglab/labeleditor</url>
-	</scm>
+	  <tag>labeleditor-0.1.0</tag>
+  </scm>
 	<issueManagement>
 		<system>GitHub Issues</system>
 		<url>https://github.com/juglab/labeleditor/issues</url>
