--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,15 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.scijava</groupId>
+			<artifactId>scijava-common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.scijava</groupId>
+			<artifactId>scijava-listeners</artifactId>
+			<version>1.0.0-beta-2</version>
+		</dependency>
+		<dependency>
 			<groupId>io.scif</groupId>
 			<artifactId>scifio</artifactId>
 		</dependency>
