--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
 			<artifactId>bigdataviewer-vistools</artifactId>
 			<version>1.0.0-beta-18</version>
 		</dependency>
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej-ui-swing</artifactId>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>sc.fiji</groupId>-->
 <!--			<artifactId>bigdataviewer-core</artifactId>-->
