ObjectsCounter prototype working
* using IJ2 threshold command
* using imagej-ops cca

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,10 @@
 			<artifactId>scijava-common</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej-plugins-commands</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.scijava</groupId>
 			<artifactId>scijava-listeners</artifactId>
 			<version>1.0.0-beta-2</version>
