--- a/pom.xml
+++ b/pom.xml
@@ -57,21 +57,19 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
-			<version>7.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-vistools</artifactId>
-			<version>1.0.0-beta-18</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej-ui-swing</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>net.imagej</groupId>-->
-<!--			<artifactId>imagej-legacy</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>imagej-legacy</artifactId>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>sc.fiji</groupId>-->
 <!--			<artifactId>bigdataviewer-core</artifactId>-->
@@ -90,12 +88,6 @@
 		<dependency>
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>sc.fiji</groupId>
-			<artifactId>bigvolumeviewer</artifactId>
-			<version>0.1.6</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 	</dependencies>
 
