--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,12 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
+			<version>7.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-vistools</artifactId>
+			<version>1.0.0-beta-18</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imagej</groupId>
