wip adding interactive table export

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,16 @@
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.imglib2</groupId>
+			<artifactId>imglib2-roi</artifactId>
+			<version>0.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scijava</groupId>
+			<artifactId>scijava-table-playground</artifactId>
+			<version>0.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<developers>
