--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>bigvolumeviewer</artifactId>
+			<version>0.1.6</version>
+			<!--			<scope>test</scope>-->
+		</dependency>
 	</dependencies>
 
 	<developers>
