--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<license.licenseName>Simplified BSD License</license.licenseName>
 		<license.copyrightOwners>DAIS developers</license.copyrightOwners>
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+		<bigdataviewer-core.version>7.0.0</bigdataviewer-core.version>
+		<bigdataviewer-vistools.version>1.0.0-beta-18</bigdataviewer-vistools.version>
 	</properties>
 
 	<name>Label Editor</name>
@@ -57,12 +59,10 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
-			<version>7.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-vistools</artifactId>
-			<version>1.0.0-beta-18</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imagej</groupId>
@@ -91,12 +91,11 @@
 			<groupId>net.imagej</groupId>
 			<artifactId>imagej</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>sc.fiji</groupId>
-			<artifactId>bigvolumeviewer</artifactId>
-			<version>0.1.6</version>
-			<!--			<scope>test</scope>-->
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>sc.fiji</groupId>-->
+<!--			<artifactId>bigvolumeviewer</artifactId>-->
+<!--			<version>0.1.6</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<developers>
