--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 
 	<properties>
 		<package-name>sc.fiji.labeleditor</package-name>
-		<license.licenseName>Simplified BSD License</license.licenseName>
+		<license.licenseName>bsd_2</license.licenseName>
 		<license.copyrightOwners>DAIS developers</license.copyrightOwners>
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
 	</properties>
