--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>29.0.0-beta-3</version>
+		<version>29.2.1</version>
 	</parent>
 
 	<groupId>sc.fiji</groupId>
@@ -129,7 +129,6 @@
 		<dependency>
 			<groupId>org.scijava</groupId>
 			<artifactId>scijava-listeners</artifactId>
-			<version>1.0.0-beta-2</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
