--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>27.0.1</version>
+		<version>30.0.0</version>
 	</parent>
 
 	<groupId>sc.fiji</groupId>
@@ -119,6 +119,9 @@
 		<license.copyrightOwners>DAIS developers</license.copyrightOwners>
 		<license.excludes>**/script-templates/**</license.excludes>
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+
+		<bigdataviewer-core.version>10.2.0</bigdataviewer-core.version>
+		<bigdataviewer-vistools.version>1.0.0-beta-28</bigdataviewer-vistools.version>
 	</properties>
 
 	<dependencies>
@@ -129,7 +132,6 @@
 		<dependency>
 			<groupId>org.scijava</groupId>
 			<artifactId>scijava-listeners</artifactId>
-			<version>1.0.0-beta-2</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
