pom.xml: change repo URLs

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>Label Editor</name>
 
 	<description>UI component for image segmentation label comparison and selection</description>
-	<url>https:github.com/juglab/LabelEditor</url>
+	<url>https:github.com/frauzufall/LabelEditor</url>
 	<inceptionYear>2019</inceptionYear>
 	<organization>
 		<name>CSBD</name>
@@ -92,19 +92,19 @@
 	</mailingLists>
 
 	<scm>
-		<connection>scm:git:git://github.com/juglab/LabelEditor</connection>
-		<developerConnection>scm:git:git@github.com:juglab/LabelEditor</developerConnection>
-		<url>https://github.com/juglab/LabelEditor</url>
+		<connection>scm:git:git://github.com/frauzufall/LabelEditor</connection>
+		<developerConnection>scm:git:git@github.com:frauzufall/LabelEditor</developerConnection>
+		<url>https://github.com/frauzufall/LabelEditor</url>
 		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/juglab/LabelEditor/issues</url>
+		<url>https://github.com/frauzufall/LabelEditor/issues</url>
 	</issueManagement>
 	<ciManagement>
 		<system>Travis CI</system>
-		<url>https://travis-ci.com/juglab/LabelEditor</url>
+		<url>https://travis-ci.com/frauzufall/LabelEditor</url>
 	</ciManagement>
 	<repositories>
 		<repository>
@@ -116,7 +116,7 @@
 	<properties>
 		<package-name>sc.fiji.labeleditor</package-name>
 		<license.licenseName>bsd_2</license.licenseName>
-		<license.copyrightOwners>DAIS developers</license.copyrightOwners>
+		<license.copyrightOwners>Deborah Schmidt</license.copyrightOwners>
 		<license.excludes>**/script_templates/**</license.excludes>
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
 
