--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>labeleditor</artifactId>
-	<version>0.9.1</version>
+	<version>0.10.0-SNAPSHOT</version>
 
 	<name>Label Editor</name>
 
